--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3374,7 +3374,7 @@ a:hover {
 
 .locationGalleryImageWrap {
     position: relative;
-    padding-top: 95%;
+    padding-top: 66%;
 }
 
 .locationGalleryImageWrap img {
@@ -3929,11 +3929,6 @@ a:hover {
 /* blog listing page css ends here */
 
 /* event listing page css starts here */
-.eventLocationFieldWrapper {
-    max-width: 400px;
-    margin: 0 auto;
-}
-
 .eventListingCardSection {
     margin-bottom: 80px;
 }
@@ -3945,7 +3940,9 @@ a:hover {
 
 .eventListingCardImageWrap {
     position: relative;
-    padding-top: 52%;
+    padding-top: 47%;
+    border-radius: 8px;
+    overflow: hidden;
 }
 
 .eventListingCardImageWrap .eventListingThumbnail {
@@ -3957,39 +3954,28 @@ a:hover {
     object-fit: cover;
 }
 
-.downloadPdfBtnWrap {
-    position: absolute;
-    right: 16px;
-    bottom: 16px;
-    max-width: 48px;
-}
-
-.downloadPdfBtnWrap img {
-    width: 100%;
-    height: 100%;
-    object-fit: contain;
-}
-
 .eventContentWrap {
     margin-top: 16px;
 }
 
 .eventListingCardTitle {
-    color: var(--Black);
-    font-family: Lexend;
+    color: var(--Navy);
+    font-family: "SF Pro";
     font-size: 24px;
     font-style: normal;
-    font-weight: 400;
+    font-weight: 590;
     line-height: 32px;
+    letter-spacing: 0.48px;
 }
 
 .eventListingDate {
-    color: var(--Blue-2);
-    font-family: Lexend;
+    color: var(--Navy);
+    font-family: "SF Pro";
     font-size: 24px;
     font-style: normal;
-    font-weight: 400;
+    font-weight: 590;
     line-height: 32px;
+    letter-spacing: -0.48px;
 }
 
 .eventLocation {
@@ -3999,9 +3985,9 @@ a:hover {
 }
 
 .eventLocationPara {
-    color: var(--Blue-2);
-    font-family: Lexend;
-    font-size: 18px;
+    color: var(--Red);
+    font-family: Inter;
+    font-size: 16px;
     font-style: normal;
     font-weight: 700;
     line-height: 24px;
@@ -4020,21 +4006,6 @@ a:hover {
     -webkit-box-orient: vertical;
     overflow: hidden;
     text-overflow: ellipsis;
-}
-
-.eventListinghashTag {
-    display: flex;
-    align-items: center;
-    gap: 8px;
-}
-
-.eventListingHashTagPara {
-    color: var(--Black);
-    font-family: Lexend;
-    font-size: 18px;
-    font-style: normal;
-    font-weight: 700;
-    line-height: 24px;
 }
 
 /* event listing page css ends here */
