--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2478,9 +2478,9 @@ a:hover {
 }
 
 .formSelectField {
-    background-image: url('../images/marine-insurance/dropdown.webp');
+    background-image: url('../images/contact/dropdown-icon.webp');
     background-repeat: no-repeat;
-    background-position: right 12px center;
+    background-position: right 4px center;
     appearance: none;
     -webkit-appearance: none;
     -moz-appearance: none;
@@ -2917,8 +2917,72 @@ a:hover {
 /* sell trade page css ends here */
 
 /* contact page css starts here */
+.contactHeading {
+    color: var(--Navy);
+    font-family: "SF Pro";
+    font-size: 48px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: 56px;
+}
+
+.contactHeaderMediaWrap {
+    position: relative;
+    padding-top: 31%;
+    min-height: 400px;
+}
+
+.contactHeaderMediaWrap .contactHeaderMedia {
+    position: absolute;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+
+.contactTextAndFormSection {
+    position: relative;
+    z-index: 2;
+    margin-top: -7%;
+}
+
+.contactFormWrapper {
+    max-width: 520px;
+    background-color: #FAFAFA;
+    border: 1px solid #D9D9D9;
+    padding: 50px 15px;
+}
+
+.contactFormInnerWrap {
+    max-width: 400px;
+    margin: 0 auto;
+}
+
+.contactTextWrapper {
+    display: flex;
+    align-items: center;
+    height: 100%;
+}
+
+
+.contactTextInnerWrapper {
+    max-width: 520px;
+}
+
+.contactColorText {
+    color: var(--Navy);
+    font-family: "SF Pro Medium";
+    font-size: 24px;
+    font-style: normal;
+    font-weight: 590;
+    line-height: 32px;
+    letter-spacing: 0.48px;
+}
+
+
 .serveLocationSection {
-    margin: 64px 0 120px 0;
+    margin: 80px 0 120px 0;
 }
 
 .contactLocationCard {
@@ -2928,6 +2992,18 @@ a:hover {
 .contactLocationImageWrap {
     position: relative;
     padding-top: 50%;
+    min-height: 300px;
+    border-radius: 8px;
+    overflow: hidden;
+}
+
+.contactLocationImageWrap iframe {
+    position: absolute;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
 }
 
 .contactLocationImageWrap img {
@@ -2944,13 +3020,12 @@ a:hover {
 }
 
 .contactLocationTitle {
-    color: var(--Black);
-    text-align: center;
-    font-family: Lexend;
-    font-size: 24px;
+    color: var(--Navy);
+    font-family: "SF Pro";
+    font-size: 32px;
     font-style: normal;
-    font-weight: 400;
-    line-height: 32px;
+    font-weight: 700;
+    line-height: 40px;
 }
 
 .addressPara {
@@ -2969,18 +3044,27 @@ a:hover {
     text-underline-position: from-font;
 }
 
+.contactAddressPara {
+    color: var(--Black);
+    font-family: Inter;
+    font-size: 16px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 24px;
+}
+
 .contactLocationPhone {
     color: var(--Navy);
-    font-family: "SF Pro";
+    font-family: "SF Pro Medium";
     font-size: 24px;
     font-style: normal;
     font-weight: 590;
     line-height: 32px;
-    letter-spacing: 0.48px;
+    letter-spacing: -0.48px;
 }
 
 .contactLocationPhone:hover {
-    color: var(--Blue-2);
+    color: var(--Navy);
 }
 
 .contactLocationInnerHeading {
@@ -4749,12 +4833,12 @@ a:hover {
         line-height: 24px;
     }
 
-    .newsLetterFormWrapper .formFieldWrap{
+    .newsLetterFormWrapper .formFieldWrap {
         width: 100%;
         max-width: 380px;
     }
 
-    .newsLetterFormWrapper .formField{
+    .newsLetterFormWrapper .formField {
         width: 100%;
     }
 }
