--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -132,6 +132,24 @@ a:hover {
     color: var(--White);
 }
 
+.secondaryRedBtn {
+    color: var(--Red);
+    text-align: center;
+    font-family: "SF Pro";
+    font-size: 16px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: 24px;
+    text-transform: uppercase;
+    display: inline-flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.secondaryRedBtn:hover {
+    color: var(--Red);
+}
+
 .blueBtn {
     color: var(--White);
     text-align: center;
@@ -4525,8 +4543,40 @@ a:hover {
     text-overflow: ellipsis;
 }
 
-
 /* special listing page css ends here */
+
+/* special detail page css starts here */
+.specialDetaisHeaderSection {
+    margin: 90px 0 80px 0;
+}
+
+.specialHeaderContentWrap {
+    max-width: 1080px;
+    padding: 0 15px;
+    margin: 0 auto;
+}
+
+.specialDetailImageWrap {
+    position: relative;
+    padding-top: 51%;
+    border-radius: 8px;
+    overflow: hidden;
+}
+
+.specialDetailImageWrap img {
+    position: absolute;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+
+.specialDetailContentWrap {
+    margin-top: 40px;
+}
+
+/* special detail page css ends here */
 
 @media(max-width: 1700px) {
     .desktopHeader {
